# gpt-action-r-api

./: .dockerignore  .gitignore  .gitleaksignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py  models.py
app/routers/: execute_r_code.py
app/utils/: r_utils.py
gpt_action_r_api/: main.py
tests/: test_execute_r_code.py  test_r_processing.py  test_run_r_code.py
