[tool.poetry]
name = "gpt-action-r-api"
version = "0.1.0"
description = ""
authors = ["philiporlando <phlp.orlando@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
rpy2 = "^3.5.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
